--- a/thanhvien1.html
+++ b/thanhvien1.html
@@ -20,8 +20,11 @@
   <h1>Xuân Yến</h1>
   <h2>Lớp 12SĐ - THPT Chuyên Bến Tre</h2>
   <p>Vai trò:NHÓM TRƯỞNG</p>
+  <p>Sở thích: nghe nhạc, nấu ăn</p>
+  <p> VƯỢT QUA CHÍNH BẢN THÂN MÌNH LÀ MỘT THÀNH TỰU VĨ ĐẠI </p>
   <a href="https://www.facebook.com/xuan.yen.0106" target="_blank" class="button-link">Facebook</a>
   <a href="index.html" class="back-link">⬅ Quay lại trang chính</a>
 </div>
 </body>
 </html>
+
