--- a/thanhvien2.html
+++ b/thanhvien2.html
@@ -20,8 +20,11 @@
   <h1>Mỹ Uyên</h1>
   <h2>Lớp 12SĐ - THPT Chuyên Bến Tre</h2>
   <p>Vai trò:SOẠN NỘI DUNG</p>
+  <P>Sở thích: đọc sách, đi bộ</P>
+  <p> LIVE BY THE SUN, LOVE BY THE MOON </p>
   <a href="https://www.facebook.com/uyen.au.1910" target="_blank" class="button-link">Facebook</a>
   <a href="index.html" class="back-link">⬅ Quay lại trang chính</a>
 </div>
 </body>
 </html>
+
