--- a/thanhvien4.html
+++ b/thanhvien4.html
@@ -20,8 +20,11 @@
   <h1>Thảo Hiền</h1>
   <h2>Lớp 12SĐ - THPT Chuyên Bến Tre</h2>
   <p>Vai trò: SOẠN BÀI THUYẾT TRÌNH</p>
+  <P>Sở thích: PN, ngủ</P>
+  <p> ĂN MÌ CAY 3 LẦN/TUẦN </p>
   <a href="https://www.facebook.com/thao.hien.443334" target="_blank" class="button-link">Facebook</a>
   <a href="index.html" class="back-link">⬅ Quay lại trang chính</a>
 </div>
 </body>
 </html>
+
