--- a/thanhvien3.html
+++ b/thanhvien3.html
@@ -20,11 +20,12 @@
   <h1>Tường Vy</h1>
   <h2>Lớp 12SĐ - THPT Chuyên Bến Tre</h2>
   <p>Vai trò: SOẠN NỘI DUNG</p>
-  <P>Sở thích: đọc tiểu thuyết, Cortis</P>
+  <P>Sở thích: đọc tiểu thuyết, Hứa Quang Hán, Cortis</P>
   <p> ƯỚC GÌ TV BỚT ĐẲNG CẤP, ĐỂ SỐNG HÒA ĐỒNG VỚI BẠN </p>
   <a href="https://www.facebook.com/le.bach.tuong.vy.2025" target="_blank" class="button-link">Facebook</a>
   <a href="index.html" class="back-link">⬅ Quay lại trang chính</a>
 </div>
 </body>
 </html>
+
 
