--- a/thanhvien5.html
+++ b/thanhvien5.html
@@ -20,8 +20,11 @@
   <h1>Trương Tuyền</h1>
   <h2>Lớp 12SĐ - THPT Chuyên Bến Tre</h2>
   <p>Vai trò: SOẠN BÀI THUYẾT TRÌNH</p>
+  <p> Sở thích: T1, xếp sao</p>
+  <p> T1 MVP!!! </p>
   <a href="https://www.facebook.com/truong.tuyen.668901" target="_blank" class="button-link">Facebook</a>
   <a href="index.html" class="back-link">⬅ Quay lại trang chính</a>
 </div>
 </body>
 </html>
+
